# tiny-differentiable-simulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  build_libs_unix.sh  build_libs_windows.bat  fix64_scalar.h  fix64_sin_lookup_table.h  fix64_types.h  register_dylibs.sh  setup.py  tiny_actuator.h  tiny_constraint_solver.h  tiny_double_utils.h  tiny_dual.h  tiny_dual_double_utils.h  tiny_eigen_helper.h  tiny_float_utils.h  tiny_geometry.h  tiny_inverse_kinematics.h  tiny_matrix3x3.h  tiny_matrix_x.h  tiny_mb_constraint_solver.h  tiny_mb_constraint_solver_spring.h  tiny_multi_body.h  tiny_neural_network.h  tiny_pd_control.h  tiny_pose.h  tiny_quaternion.h  tiny_raycast.h  tiny_rigid_body.h  tiny_smooth_constraint_solver.h  tiny_spatial_motion_vector.h  tiny_spatial_transform.h  tiny_symmetric_spatial_dyad.h  tiny_urdf_conversion.h  tiny_urdf_structures.h  (+4 more)
examples/: CMakeLists.txt  billiard_opt_example_gui.cpp  billiard_opt_gui.cpp  cartpole_eval.cpp  cartpole_opt.cpp  ceres_estimation.cpp  ceres_estimation_real.cpp  ceres_utils.h  cgal_sdf_to_mesh.cpp  cgal_sdf_to_mesh_ellipsoid.cpp  contact_discovery.cpp  control_toolbox.h  cppad_utils.h  ct_cartpole.cpp  ct_contact_trajopt.cpp  ct_laikago_tracking.cpp  cuda_ant_codegen.cpp  cuda_codegen.cpp  cuda_laikago_codegen.cpp  environment_eval.cpp  environment_train.cpp  generic_urdf_collision.cpp  gravity_compensation.cpp  inclined_plane_gui.cpp  laikago_eval.cpp  laikago_example_gui.cpp  laikago_footstep_ik.cpp  laikago_meshcat_example.cpp  laikago_opengl_example.cpp  load_pytorch_network.cpp  meshcat_cube_data.h  meshcat_urdf_visualizer.h  meshcat_zmq.h  meshcat_zmq_example.cpp  motion_import.h  neural_contact.cpp  neural_pendulum.cpp  neural_scalar.h  opengl_imgui_test.cpp  opengl_test.cpp  (+41 more)
examples/ars/: CMakeLists.txt  ars_config.h  ars_learner.h  ars_run_policy.cpp  ars_train_policy.cpp  ars_train_policy_cuda.cpp  ars_train_policy_omp.cpp  ars_train_policy_omp_ant.cpp  ars_vectorized_environment.h  ars_vectorized_worker.h  cuda_codegen.cpp  eval_laikago_env.cpp  running_stat.h  shared_noise_table.h
examples/environments/: ant_environment.h  ant_environment2.h  ant_org_xyz_xyzrot.h  cartpole_environment.h  cartpole_urdf.h  cuda_model_laikago_forward_zero.cpp  humanoid_environment.h  humanoid_xyz_spherical.h  laikago_environment.h  laikago_environment2.h  laikago_toes_zup_urdf.h  laikago_toes_zup_xyz_xyzrot.h  laikago_toes_zup_xyz_xyzrot_urdf.h  locomotion_contact_simulation.h  omp_model_ant_forward_zero.h  omp_model_humanoid_forward_zero.h  omp_model_laikago_forward_zero.h  plane_implicit_urdf.h  reacher.urdf.h  reacher_environment.h
examples/opengl_window/: CMakeLists.txt  tiny_camera.cpp  tiny_camera.h  tiny_common_callbacks.h  tiny_common_graphics_app_interface.h  tiny_egl_opengl_window.cpp  tiny_egl_opengl_window.h  tiny_font_stash.cpp  tiny_font_stash.h  tiny_fonts.cpp  tiny_fonts.h  tiny_gl_instance_graphics_shape.h  tiny_gl_instance_renderer_internal_data.h  tiny_gl_instancing_renderer.cpp  tiny_gl_instancing_renderer.h  tiny_gl_prim_internal_data.h  tiny_gl_primitive_renderer.cpp  tiny_gl_primitive_renderer.h  tiny_gl_render_to_texture.cpp  tiny_gl_render_to_texture.h  tiny_glfw_opengl_window.cpp  tiny_glfw_opengl_window.h  tiny_load_shader.cpp  tiny_load_shader.h  tiny_mac_opengl_window.cpp  tiny_mac_opengl_window.h  tiny_mac_opengl_window_objc.h  tiny_open_sans.cpp  tiny_opengl3_app.cpp  tiny_opengl3_app.h  tiny_opengl_fontstashcallbacks.cpp  tiny_opengl_fontstashcallbacks.h  tiny_opengl_include.h  tiny_resizable_pool.h  tiny_shape_data.h  tiny_win32_internal_window_data.h  tiny_win32_opengl_window.cpp  tiny_win32_opengl_window.h  tiny_win32_window.cpp  tiny_win32_window.h  (+3 more)
examples/opengl_window/Shaders/: projectiveTextureInstancingVS.h  segmentationMaskInstancingVS.h  useShadowMapInstancingVS.h
examples/utils/: tiny_chrome_trace_util.cpp  tiny_chrome_trace_util.h  tiny_clock.cpp  tiny_clock.h  tiny_logging.cpp  tiny_logging.h
examples/whole_body_control/: com_velocity_estimator.hpp  laikago_tds_mpc.cpp  laikago_tds_sim.cpp  mpc_ffn_model_script.pt  neural_network_from_json.hpp  openloop_gait_generator.hpp  osqp_mpc_controller.hpp  raibert_swing_leg_controller.hpp  simple_robot.hpp  torque_stance_leg_controller.hpp
python/: CMakeLists.txt  diffphys_example.py  pydiffphys.cc  pydiffphys_example.py  pytinydiffsim.cc  pytinydiffsim.inl  pytinydiffsim_ad.cc  pytinydiffsim_dual.cc  pytinydiffsim_example.py  pytinydiffsim_includes.h  pytinyopengl3.cc
python/examples/: a_meshcat_example.py  b_urdf_structs_example.py  billiard_optimization.py  c_urdf_structs_mesh_cat_example.py  cppad_example.py  d_meshcat_tinymultibody.py  e_load_urdf.py  f_meshcat_tinyurdf.py  g_raycast.py  meshcat_utils_dp.py  meshcat_utils_pb.py  motion_test.py  opengl_playground.py  opengl_utils_pd.py  pd_control.py  quaternion_euler_conversion.py  render_gl.py  render_obj_gl.py  render_tiled.py  tiled_vec_laikago_render.py  urdf_utils_pb.py  vec_ant.py  vec_laikago.py  vec_laikago_render.py  warp_gl_interop.py  z_dual_numbers.py
python/examples/voxels/: geom_utils.py  ldi.py  ldi3d.py
python/examples/whole_body_control/: com_velocity_estimator.py  laikago_tds_sim_clean.py  locomotion_controller.py  locomotion_controller_example.py  mpc_ffn_model.pt  (+5 more)
python/plotting/: .gitignore  plot_contact_trajopt_perf.py  plot_estimated_trajectory_evolution.py  plot_estimation_gradient.py  plot_estimation_trajectory.py  plot_neural_contact_trajectory.py  plot_param_evolution.py  plot_schmidt_lipton_raw.py  plot_soft_contact.py  plot_tracking_perf.py  sys_id_basin_hopping.py  sys_id_param_evolution.py
python/pytinydiffsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tds_environments/: __init__.py  cartpole_tds_env.py  reacher_tds_env.py
test/: CMakeLists.txt  ct_cartpole_test.cc  estimation_utils.hpp  math_test.cc  pendulum_gradient.h  pendulum_gradient_test.cc  pendulum_test.cc  rbdl_test_utils.hpp  stan_test.cc  test_codegen.cpp  test_gradients.cpp  test_rbdl.cpp  test_spatial.cpp  urdf_test.cc
(+453 files in other folders)
